--- a/CSS3/style.css
+++ b/CSS3/style.css
@@ -91,7 +91,29 @@ ul > li > a {
   background-color: cadetblue;
   position: fixed;
   top: 50%;
-  /* left: 50%; */
+  left: 50%;
+}
+
+.div-container {
+  height: 400px;
+  width: 500px;
+  border: 2px solid black;
+  margin: 10px;
+}
+
+.a,
+.b {
+  height: 100px;
+  width: 200px;
+  border: 2px solid black;
+  margin: 10px;
+}
+
+.a {
+  background-image: url(https://camo.githubusercontent.com/2309797487e5e969659a3b545c96151807b04120a9cc2985f632ec94ba00c9f3/68747470733a2f2f6d656469612e67697068792e636f6d2f6d656469612f53576f536b4e36447854737a71494b4571762f67697068792e676966);
+  background-size: 70px 50px;
+  background-repeat: no-repeat;
+  background-position: right bottom;
 }
 
 footer {
